# SistemaLEC

./: .env.example  .gitignore  alembic.ini  app.db  architecture.md  architecture_guide.md  fix_empty_data_acao.py  index.html  main.py  migrate_csv.py  pyproject.toml  requirements.txt
alembic/: env.py
assets/: index--BTtb7TV.css  index-1vl2KHX-.js  index-3d5R3mKM.css  index-7VpV0OPK.js  index-B1c8iCHF.js  index-B6KyrjrN.js  index-BCmcIvLg.js  index-BIn590v4.css  index-BNMfRCxS.js  index-BO5jEzdb.js  index-BPrQsB37.css  index-BY558ejd.js  index-BYWV8pr8.js  index-BYmKMgOJ.js  index-BnTZXZbp.js  index-Bo-TFoqw.css  index-ByKw8Anu.js  index-C-iFfanp.js  index-C1RUI534.js  index-CCk3qYYt.js  index-CEdQ5iOo.css  index-CKBgVnfR.css  index-CVr7Emox.css  index-CYHkcA0q.js  index-Ce2uzYgr.js  index-CeOLh40v.js  index-CkTqAFja.js  index-Cl_9gv1h.css  index-CqnjqCH3.css  index-CrmAybVe.css  index-D4xG45W2.css  index-D9n8aQaK.js  index-DBMAE7SW.js  index-DHsaVyN0.css  index-DT1U9nJH.js  index-DWtDmvi6.js  index-DZ3JND4n.js  index-D_ehqw_J.css  index-Dihb30WD.js  index-DrnHlFrL.js  (+7 more)
data/: Fila sistema Sede Plástica.xlsx  Procedimentos Plástica.xlsx  app.db  app.db.bak  pacientes.csv  solicitacoes.csv  status_locais.csv  ~$Fila sistema Sede Plástica.xlsx
frontend/: index.html  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1784651948016-a8b1f31ffc8ec.mjs
scratch/: check_aghu.py  check_aghu_schema.py  check_db.py  check_local_db_counts.py  check_remote_data.py  check_remote_dbs.py  clean_perfis.py  clean_specialties_and_data.py  clear_db.py  clear_remote_db.py  (+18 more)
(+180 files in other folders)
