[project]
name = "appstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.21.0",
    "alembic==1.17.1",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncpg==0.30.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "fastapi==0.121.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "idna==3.11",
    "ldap3==2.9.1",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "requests==2.32.5",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.49.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
]
